--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title></title>
     <meta content="">
+    <script type="text/javascript" src="./particules.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <style>
       html {
@@ -15,14 +16,27 @@
         margin: 0;
       }
 
-      #wrapper {
+      #particles-js{
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+      }
+
+      #wrapper{
         display: flex;
         color: #EEE;
       }
 
-      div {
+
+      #logo {
         margin: auto;
         text-align: center;
+        background: rgba(54, 54, 54, 0.27);
+        border-radius: 10px;
+        padding: 20px 25px 15px 25px;
+        pointer-events: none;
       }
 
       h1 {
@@ -57,9 +71,9 @@
     </style>
   </head>
   <body>
-
+    <div id="particles-js"></div>
     <div id="wrapper">
-      <div>
+      <div id="logo">
         <h1>
           <span><span class="bordered">s</span><span class="color">MA</span><span class="bordered">r</span></span><span><span class="color">TH</span><span class="bordered">Y</span></span><span><span class="gray">.io</span></span>
         </h1>
@@ -67,6 +81,123 @@
         <h5>Coming soon - by Arthy</h5>
       </div>
     </div>
+
+    <script type="text/javascript">
+      document.addEventListener("DOMContentLoaded", function(event) {
+        let particles_json = {
+          "particles": {
+            "number": {
+              "value": 20,
+              "density": {
+                "enable": true,
+                "value_area": 800
+              }
+            },
+            "color": {
+              "value": "#f8954e"
+            },
+            "shape": {
+              "type": "circle",
+              "stroke": {
+                "width": 0,
+                "color": "#000000"
+              },
+              "polygon": {
+                "nb_sides": 5
+              },
+              "image": {
+                "src": "img/github.svg",
+                "width": 100,
+                "height": 100
+              }
+            },
+            "opacity": {
+              "value": 0.5,
+              "random": false,
+              "anim": {
+                "enable": false,
+                "speed": 1,
+                "opacity_min": 0.1,
+                "sync": false
+              }
+            },
+            "size": {
+              "value": 10,
+              "random": true,
+              "anim": {
+                "enable": false,
+                "speed": 25,
+                "size_min": 0.1,
+                "sync": false
+              }
+            },
+            "line_linked": {
+              "enable": true,
+              "distance": 300,
+              "color": "#000",
+              "opacity": .75,
+              "width": 2
+            },
+            "move": {
+              "enable": true,
+              "speed": 12,
+              "direction": "none",
+              "random": false,
+              "straight": false,
+              "out_mode": "out",
+              "bounce": false,
+              "attract": {
+                "enable": false,
+                "rotateX": 600,
+                "rotateY": 1200
+              }
+            }
+          },
+          "interactivity": {
+            "detect_on": "canvas",
+            "events": {
+              "onhover": {
+                "enable": true,
+                "mode": "grab"
+              },
+              "onclick": {
+                "enable": true,
+                "mode": "repulse"
+              },
+              "resize": true
+            },
+            "modes": {
+              "grab": {
+                "distance": 200,
+                "line_linked": {
+                  "opacity": 1
+                }
+              },
+              "bubble": {
+                "distance": 800,
+                "size": 15,
+                "duration": 2,
+                "opacity": 0.8,
+                "speed": 3
+              },
+              "repulse": {
+                "distance": 400,
+                "duration": 0.4
+              },
+              "push": {
+                "particles_nb": 4
+              },
+              "remove": {
+                "particles_nb": 2
+              }
+            }
+          },
+          "retina_detect": true
+        }
+
+        particlesJS('particles-js', particles_json)
+      })
+    </script>
 
   </body>
 </html>
